...

      title: Row(
        mainAxisAlignment: MainAxisAlignment.end,
        children: [
          // 1. Ícone Calendário (Home)
          IconButton(
            key: const ValueKey('calendar_appbar_button'),
            icon: const Icon(Icons.calendar_today),
            // Lógica ternária: Se for 'calendar' usa laranja, senão usa azul escuro
            color: selectedScreen == 'calendar'
                ? AppColors.primary
                : AppColors.secondary,
            tooltip: 'Agenda',
...
          ),

          const SizedBox(width: 4),

          // 2. Ícone Perfil
          IconButton(
            key: const ValueKey('profile_appbar_button'),
            icon: const Icon(Icons.person),
            color: selectedScreen == 'profile'
                ? AppColors.primary
                : AppColors.secondary,
            tooltip: 'Meu Perfil',
            onPressed: () {
...
