...
    return SafeArea(
      child: Scaffold(
        appBar: const MyRoadieAppBar(selectedScreen: 'calendar'),

        // 4. Botão Flutuante para Adicionar
        floatingActionButton: FloatingActionButton(
          key: const ValueKey('agenda_add_button'),
          backgroundColor: AppColors.primary, // Laranja
          child: const Icon(
            Icons.add,
            color: AppColors.textLight,
          ), // Ícone branco
          onPressed: () {
...
